<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<artifactId>listing-rest</artifactId>
	<packaging>war</packaging>
	<name>Listing Rest Module</name>
	<url>http://maven.apache.org</url>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<springframeworkVersion>4.0.5.RELEASE</springframeworkVersion>
		<hibernate.version>4.2.15.Final</hibernate.version>
		<postgresql.version>9.3-1102-jdbc41</postgresql.version>
		<jmockit.version>1.7</jmockit.version>
		<mockito.version>1.10.19</mockito.version>
		<powermock.version>1.6.2</powermock.version>
		<build.number>SNAPSHOT</build.number>
	</properties>

	<parent>
		<groupId>listing</groupId>
		<artifactId>listing-base</artifactId>
		<version>1.0.1-SNAPSHOT</version>
		<relativePath>../pom.xml</relativePath>
	</parent>

	<build>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.2</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>cobertura-maven-plugin</artifactId>
				<version>2.7</version>
				<configuration>
					<instrumentation>
						<ignoreTrivial>true</ignoreTrivial>
						<!-- Reason for exclusion -->
						<!-- uk.co.listing.rest : The api contains no code , it only contains annotation and mapping info -->
						<!-- uk.co.listing.domain : No code , only hibernate annotation which represent data base table  -->
						<!-- uk.co.listing.exception : No code , object to represent exceptions -->
						<ignores>
							<ignore>uk.co.listing.rest.service.*</ignore>
							<ignore>uk.co.listing.rest.response.*</ignore>
							<ignore> uk.co.listing.rest.message.*</ignore>
							<ignore>uk.co.listing.domain.*</ignore>
							<ignore> uk.co.listing.domain.constant.*</ignore>
							<ignore> uk.co.listing.exceptions.*</ignore>
						</ignores>
						<excludes>
							<exclude>uk/co/listing/rest/service/*.class</exclude>
							<exclude>uk/co/listing/rest/response/*.class</exclude>
							<exclude>uk/co/listing/rest/message/*.class</exclude>
							<exclude>uk/co/listing/domain/*.class</exclude>
							<exclude>uk/co/listing/domain/constant/*.class</exclude>
							<exclude>uk/co/listing/exceptions/*.class</exclude>
						</excludes>
					</instrumentation>
					<quiet>true</quiet>
					<formats>
						<format>html</format>
						<format>xml</format>
					</formats>
				</configuration>
				<executions>
					<execution>
						<phase>verify</phase>
						<goals>
							<goal>cobertura</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<artifactId>maven-failsafe-plugin</artifactId>
				<version>2.18.1</version>
				<executions>
					<execution>
						<goals>
							<goal>integration-test</goal>
						</goals>
					</execution>
					<execution>
						<id>verify</id>
						<phase>verify</phase>
						<goals>
							<goal>verify</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
						<forkCount>2</forkCount>
						<reuseForks>false</reuseForks>
						<argLine>-Xmx2g -XX:MaxPermSize=2g</argLine>
						<systemPropertyVariables>
							<cucumber.options>${cucumber.options}</cucumber.options>
						</systemPropertyVariables>
				</configuration>
			</plugin>


			<plugin>
				<groupId>org.mortbay.jetty</groupId>
				<artifactId>maven-jetty-plugin</artifactId>
				<version>6.1.26</version>
				<configuration>
					<type>standalone</type>
					<webApp>${project.build.directory}/listing-rest.war</webApp>
					<scanIntervalSeconds>10</scanIntervalSeconds>
					<stopKey>foo</stopKey>
					<stopPort>9998</stopPort>
					<reload>manual</reload>
					<connectors>
						<connector implementation="org.mortbay.jetty.nio.SelectChannelConnector">
							<port>9999</port>
							<maxIdleTime>60000</maxIdleTime>
						</connector>
					</connectors>
					<contextHandlers>
						<contextHandler implementation="org.mortbay.jetty.webapp.WebAppContext">
							<war>${basedir}/../listing-ui/target/listing-ui-${project.version}.war</war>
							<contextPath>/listing-ui</contextPath>
						</contextHandler>
					</contextHandlers>
					<systemProperties>
						<systemProperty>
							<name>env</name>
							<value>test</value>
						</systemProperty>
					</systemProperties>
				</configuration>
				<executions>
					<execution>
						<id>start-jetty</id>
						<phase>pre-integration-test</phase>
						<goals>
							<goal>run</goal>
						</goals>
						<configuration>
							<daemon>true</daemon>
						</configuration>
					</execution>
					<execution>
						<id>stop-jetty</id>
						<phase>post-integration-test</phase>
						<goals>
							<goal>stop</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<!-- <plugin> -->
			<!-- <groupId>org.mortbay.jetty</groupId> -->
			<!-- <artifactId>jetty-maven-plugin</artifactId> -->
			<!-- <version>8.1.16.v20140903</version> -->
			<!-- <configuration> -->
			<!-- <type>standalone</type> -->
			<!-- <webAppConfig> -->
			<!-- <war>${project.build.directory}/listing-rest.war</war> -->
			<!-- <contextPath>/listing-rest</contextPath> -->
			<!-- </webAppConfig> -->
			<!-- <scanIntervalSeconds>10</scanIntervalSeconds> -->
			<!-- <stopKey>foo</stopKey> -->
			<!-- <stopPort>9998</stopPort> -->
			<!-- <reload>manual</reload> -->
			<!-- <contextHandlers> -->
			<!-- <contextHandler implementation="org.eclipse.jetty.webapp.WebAppContext"> -->
			<!-- <war>${basedir}/../listing-ui/target/listing-ui.war</war> -->
			<!-- <contextPath>/listing-ui</contextPath> -->
			<!-- </contextHandler> -->
			<!-- </contextHandlers> -->
			<!-- <systemProperties> -->
			<!-- <systemProperty> -->
			<!-- <name>env</name> -->
			<!-- <value>test</value> -->
			<!-- </systemProperty> -->
			<!-- </systemProperties> -->
			<!-- </configuration> -->
			<!-- <executions> -->
			<!-- <execution> -->
			<!-- <id>start-jetty</id> -->
			<!-- <phase>pre-integration-test</phase> -->
			<!-- <goals> -->
			<!-- <goal>deploy-war</goal> -->
			<!-- </goals> -->
			<!-- <configuration> -->
			<!-- <daemon>true</daemon> -->
			<!-- <reload>manual</reload> -->
			<!-- </configuration> -->
			<!-- </execution> -->
			<!-- <execution> -->
			<!-- <id>stop-jetty</id> -->
			<!-- <phase>post-integration-test</phase> -->
			<!-- <goals> -->
			<!-- <goal>stop</goal> -->
			<!-- </goals> -->
			<!-- </execution> -->
			<!-- </executions> -->
			<!-- </plugin> -->

		</plugins>
	</build>

	<dependencies>
		<!-- Junit and Mocking -->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.11</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>io.github.bonigarcia</groupId>
			<artifactId>webdrivermanager</artifactId>
			<version>1.0.0</version>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-all</artifactId>
			<version>${mockito.version}</version>
		</dependency>
		<dependency>
			<groupId>org.powermock</groupId>
			<artifactId>powermock-module-junit4</artifactId>
			<version>${powermock.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.powermock</groupId>
			<artifactId>powermock-api-mockito</artifactId>
			<version>${powermock.version}</version>
			<scope>test</scope>
		</dependency>

		<!-- Jersey -->
		<dependency>
			<groupId>com.sun.jersey</groupId>
			<artifactId>jersey-server</artifactId>
			<version>1.19</version>
		</dependency>
		<dependency>
			<groupId>com.sun.jersey.contribs</groupId>
			<artifactId>jersey-spring</artifactId>
			<version>1.19</version>
			<exclusions>
				<exclusion>
					<groupId>org.springframework</groupId>
					<artifactId>spring</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.springframework</groupId>
					<artifactId>spring-core</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.springframework</groupId>
					<artifactId>spring-web</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.springframework</groupId>
					<artifactId>spring-beans</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.springframework</groupId>
					<artifactId>spring-context</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.springframework</groupId>
					<artifactId>spring-aop</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>com.sun.jersey</groupId>
			<artifactId>jersey-json</artifactId>
			<version>1.19</version>
		</dependency>
		<dependency>
			<groupId>com.sun.jersey.contribs</groupId>
			<artifactId>jersey-multipart</artifactId>
			<version>1.19</version>
		</dependency>
		<!-- Spring framework distribution -->
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-core</artifactId>
			<version>${springframeworkVersion}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-beans</artifactId>
			<version>${springframeworkVersion}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-context</artifactId>
			<version>${springframeworkVersion}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-tx</artifactId>
			<version>${springframeworkVersion}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-web</artifactId>
			<version>${springframeworkVersion}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-orm</artifactId>
			<version>${springframeworkVersion}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-test</artifactId>
			<version>${springframeworkVersion}</version>
		</dependency>

		<!-- Spring configuration ends -->
		<!-- Hibernate configuration starts -->
		<dependency>
			<groupId>org.hibernate</groupId>
			<artifactId>hibernate-entitymanager</artifactId>
			<version>${hibernate.version}</version>
		</dependency>

		<dependency>
			<groupId>org.hibernate</groupId>
			<artifactId>hibernate-envers</artifactId>
			<version>${hibernate.version}</version>
			<exclusions>
				<exclusion>
					<groupId>org.hibernate</groupId>
					<artifactId>hibernate-commons-annotations</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.hibernate.javax.persistence</groupId>
					<artifactId>hibernate-jpa-2.0-api</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<!-- SLF4J -->
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>1.6.6</version>
		</dependency>
		<!-- Hibernate configuration ends -->

		<!-- PostgreSQL 9.3.5 database -->
		<dependency>
			<groupId>org.postgresql</groupId>
			<artifactId>postgresql</artifactId>
			<version>${postgresql.version}</version>
		</dependency>
		<!-- PostgreSQL 9.3.5 database ends -->

		<!-- Cucumber and selenium -->
		<dependency>
			<groupId>info.cukes</groupId>
			<artifactId>cucumber-junit</artifactId>
			<version>1.2.2</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>info.cukes</groupId>
			<artifactId>cucumber-html</artifactId>
			<version>0.2.3</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>info.cukes</groupId>
			<artifactId>cucumber-java</artifactId>
			<version>1.2.2</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>info.cukes</groupId>
			<artifactId>cucumber-core</artifactId>
			<version>1.2.2</version>
		</dependency>
		<dependency>
			<groupId>info.cukes</groupId>
			<artifactId>cucumber-picocontainer</artifactId>
			<version>1.2.2</version>
		</dependency>
		<dependency>
			<groupId>org.seleniumhq.selenium</groupId>
			<artifactId>selenium-java</artifactId>
			<version>2.39.0</version>
		</dependency>
		<dependency>
			<groupId>com.github.detro.ghostdriver</groupId>
			<artifactId>phantomjsdriver</artifactId>
			<version>1.1.0</version>
		</dependency>
		<dependency>
			<groupId>org.picocontainer</groupId>
			<artifactId>picocontainer</artifactId>
			<version>2.15</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.mortbay.jetty</groupId>
			<artifactId>jsp-2.1</artifactId>
			<version>6.0.0</version>
		</dependency>
		<dependency>
			<groupId>log4j</groupId>
			<artifactId>log4j</artifactId>
			<version>1.2.17</version>
		</dependency>
		<dependency>
			<groupId>org.apache.tomcat</groupId>
			<artifactId>tomcat-catalina</artifactId>
			<version>7.0.47</version>
		</dependency>
		<dependency>
			<groupId>commons-dbcp</groupId>
			<artifactId>commons-dbcp</artifactId>
			<version>1.4</version>
		</dependency>
	</dependencies>
	<repositories>
		<repository>
			<id>maven2-repository.dev.java.net</id>
			<name>Java.net Repository for Maven</name>
			<url>http://download.java.net/maven/2/</url>
		</repository>
		<repository>
			<id>com.springsource.repository.bundles.release</id>
			<name>EBR Spring Release Repository</name>
			<url>http://repository.springsource.com/maven/bundles/release</url>
		</repository>
		<repository>
			<id>com.springsource.repository.bundles.external</id>
			<name>EBR External Release Repository</name>
			<url>http://repository.springsource.com/maven/bundles/external</url>
		</repository>
	</repositories>

</project>
